renamed API, updated api doc, improved README, added postman collection for test cases
