# external/payment-go/docs/swagger.yaml
@@ -20,7 +20,7 @@ info:
   contact:
     email: ar.mallick@reply.de
     name: Arka Mallick
-  description: This is a billing/payment API.
+  description: Removes the desired index from the Bills slice
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -72,7 +72,7 @@ paths:
           description: Not Found
           schema:
             type: string
-  /payment:
+  /newpayment:
     post:
       consumes:
       - application/json
